--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Saul Ibarra <saul@ag-projects.com>
 Uploaders: Dan Pascu <dan@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>, Lucian Stanescu <luci@ag-projects.com>
-Build-Depends: cdbs (>= 0.4.53), debhelper (>= 7.0.0), python
-Build-Depends-Indep: python-support
+Build-Depends: cdbs (>= 0.4.53), debhelper (>= 7.0.0), python-all-dev (>= 2.5), python-support
 Standards-Version: 3.8.4
 
 Package: openxcap
