Add INSTALL and scripts to openxcap shared directory on Debian
Ignore-this: b00cfd9f77494b469e13f35e743f12c0

darcs-hash:20100426112241-56b4d-b6c13721f5714b2a455e175627514f417ec710ac.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-recursive-include debian   changelog compat control copyright install
+recursive-include debian   changelog compat control copyright
 recursive-include debian   pycompat pyversions rules
-recursive-include debian   *.dirs *.init *.postinst *.postrm
+recursive-include debian   *.dirs *.init *.postinst *.postrm *.docs *.install
 recursive-include opensips *.cfg
 recursive-include scripts  *.py *.sql
 recursive-include tls      .placeholder
