Use default opensips username and password
Ignore-this: 1193338e5fa70346b3a6db2e03dc3e68

darcs-hash:20100520072956-58252-ef705148719424cc4e0bea458a3e4d4b9020a906.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -100,10 +100,10 @@ default_realm = example.com
 [Database]
 
 ; The database connection URI for the datase with subscriber accounts
-authentication_db_uri = mysql://username:password@db/opensips
+authentication_db_uri = mysql://opensips:opensipsrw@db/opensips
 
 ; The database connection URI for the database that stores the XCAP documents
-storage_db_uri = mysql://username:password@db/opensips
+storage_db_uri = mysql://opensips:opensipsrw@db/opensips
 
 ; Authentication and storage tables
 ; subscriber_table = subscriber
