Check external references for pres-rules and resource-lists
Ignore-this: 9c5e3c74bf568efa92e4f90c4f1f7738

Behavior can be toggled from the configuration file

darcs-hash:20100809130116-56b4d-60bc756a0a5e8c5eaaed9153e84a34c4ad756e25.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -31,6 +31,10 @@ backend = OpenSIPS
 
 ; document_validation = Yes
 
+; Allow URIs in pres-rules and resource-lists to point to lists not served
+; by this server
+
+allow_external_references = No
 
 [Logging]
 
