Added disabled_applications setting
Ignore-this: 6b39818ec66a47dca88477ece29dbb20

It controls which applications are disabled.
They won't even be advertised by xcap-caps

darcs-hash:20101024183622-56b4d-bf85656adb59a3c7faee70b707acf4d875ab96f0.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -36,6 +36,10 @@ backend = OpenSIPS
 
 allow_external_references = No
 
+; List os applications that won't be enabled on the server
+disabled_applications = 
+
+; List of applications that will be disabled in the server. They won-'t be 
 [Logging]
 
 ; Start, stop and major server error messages are always logged to syslog.
