--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Saul Ibarra <saul@ag-projects.com>
 Uploaders: Dan Pascu <dan@ag-projects.com>, Adrian Georgescu <ag@ag-projects.com>, Lucian Stanescu <luci@ag-projects.com>
+Build-Depends: debhelper (>= 7.3.5), python(>= 2.5)
 Standards-Version: 3.9.2
 
 Package: openxcap
