Moved test package to toplevel
Ignore-this: a288e994d4332a9364ca7af091999bee

darcs-hash:20110607063205-56b4d-0a139397546cf89e1c6b5bcdd8ca8b561381533f.gz

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,8 +4,8 @@ recursive-include debian   *.dirs *.init *.postinst *.postrm *.docs *.install *.
 recursive-include opensips *.cfg
 recursive-include scripts  *.py *.sql
 recursive-include tls      .placeholder
-recursive-include xcap/test/schemas *.xsd
 recursive-include xcap/appusage/xml-schemas  *.xsd
+recursive-include test *
 prune debian/tmp
 prune debian/openxcap
 prune debian/python-module-stampdir
