Added example for disabling XCAP applications
Ignore-this: 25e746ae8ce49e4939691e95e262ec0d

darcs-hash:20111219170835-56b4d-89d8416f5cbb8a453b1be945691d64ea8b89a24f.gz

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -37,9 +37,8 @@ backend = OpenSIPS
 allow_external_references = No
 
 ; List os applications that won't be enabled on the server
-disabled_applications = 
+;disabled_applications = test-app, org.openxcap.dialog-rules
 
-; List of applications that will be disabled in the server. They won-'t be 
 [Logging]
 
 ; Start, stop and major server error messages are always logged to syslog.
