Removed no longer needed dependency
Ignore-this: c2571e9349d964ae4f1ea255bd86f1a5

darcs-hash:20120822154948-56b4d-fc4be22b6a9134072c97ca18124821d86642fed8.gz

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.2
 
 Package: openxcap
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python-lxml (>= 2.0.7-1), python-zopeinterface, python-twisted-core (>= 8.1.0), python-twisted-web (>= 8.1.0), python-twisted-web2 (>= 8.1.0), python-application (>= 1.2.8), python-gnutls (>= 1.1.8), python-sqlobject, python-mysqldb, python-imaging
+Depends: ${python:Depends}, ${misc:Depends}, python-lxml (>= 2.0.7-1), python-zopeinterface, python-twisted-core (>= 8.1.0), python-twisted-web (>= 8.1.0), python-twisted-web2 (>= 8.1.0), python-application (>= 1.2.8), python-gnutls (>= 1.1.8), python-sqlobject, python-mysqldb
 Description: An Open Source XCAP server implementation
  XCAP protocol allows a client to read, write and modify application
  configuration data stored in XML format on a server. XCAP maps XML document
